--- a/References/ToE_Ref.bib
+++ b/References/ToE_Ref.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 24 Nov 2020.
+%% Created using Papers on Wed, 25 Nov 2020.
 %% http://papersapp.com/papers/
 
 @article{Gaines:2018sg,
@@ -741,6 +741,15 @@ author = {{NOAA}},
 title = {{International agreements concerning living marine resources of interest to NOAA fisheries}},
 institution = {Office of international affairs and seafood inspection},
 year = {2018},
+month = oct
+}
+
+@article{Tunca:2019if,
+author = {Tunca, Sezgin},
+title = {{Cooperative Fisheries Outperform Non-cooperative Ones in the Baltic Sea Under Different Climate Scenarios}},
+journal = {fmars-06-00622.tex},
+year = {2019},
+pages = {1--11},
 month = oct
 }
 
