--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -27,7 +27,7 @@ packages <- c(
   "tidyverse" ,
   "png",
   "grid",
-  "knitr",
+  "knitr"#,
  # "kableExtra"
   # "here", # for dbem_import `here()`
   # "data.table", #dbem_import `fread()`
@@ -187,7 +187,7 @@ prop_r <- read_csv("/Volumes/HALL2000/Data/TransEmergence/Results/proportion_cha
 
 Time of emergence of transboundary stocks
 
-The average time of emergence of the transboundary index across the emerging stocks in all EEZs analyzed is projected to be 2029 \pm 26 years (Figure \@ref(fig:toeFigure1)). In total, the projected transboundary index of 5,745 stocks (63% of the studied stocks) will emerge from their historical variability between 2006 and 2100. Fish stocks with transboundary index that first emerged from their historical variability in each EEZ was projected to be as early as 2006 and the last one in 2100. About 55% (n = 3,154) of those emerging stocks are projected to have their transboundary index emerged between 2006 and 2020 (e.g. Peruvean anchoveta - *Engraulis ringens* - shared by Chile and Peru emerged in 2010). The number of EEZs with emerging stocks is projected to increase steeply from 87% in 2006 to 96% in 2020. After the mid-2020s, the rate of increase in the number EEZs slow down to an average of 0.7% per year. By 2081, all of the EEZs analyzed here will have at least one emerging stock (Figure \@ref(fig:toeFigure1)). Moreover, 96% of the world’s EEZs saw at least one stock having their distribution shifts between 2006 and 2020 and around one fifth (19%) of the EEZs have an average time of emergence of the transboundary index across stocks prior to 2020. Shifts in stocks’ distributions will continue to exceed historical limits steadily towards the end of the $21^{st}$ century (Figure Figure \@ref(fig:toeFigure1)). I based our transboundary index on a transboundary stock’s centroid defined as the average grid cells that present the higher stock’s abundance (see Methods - Calculating an index of transboundary range shift). Results from the sensitivity analysis suggest that our method of estimating the time of emergence of the transboundary index is robust to the abundance level (e.g. the top 90%) of the stock (Figure \@ref(fig:toeFigureS3).
+The average time of emergence of the transboundary index across the emerging stocks in all EEZs analyzed is projected to be 2029 $\pm$ 26 years (Figure \@ref(fig:toeFigure1)). In total, the projected transboundary index of 5,745 stocks (63% of the studied stocks) will emerge from their historical variability between 2006 and 2100. Fish stocks with transboundary index that first emerged from their historical variability in each EEZ was projected to be as early as 2006 and the last one in 2100. About 55% (n = 3,154) of those emerging stocks are projected to have their transboundary index emerged between 2006 and 2020 (e.g. Peruvean anchoveta - *Engraulis ringens* - shared by Chile and Peru emerged in 2010). The number of EEZs with emerging stocks is projected to increase steeply from 87% in 2006 to 96% in 2020. After the mid-2020s, the rate of increase in the number EEZs slow down to an average of 0.7% per year. By 2081, all of the EEZs analyzed here will have at least one emerging stock (Figure \@ref(fig:toeFigure1)). Moreover, 96% of the world’s EEZs saw at least one stock having their distribution shifts between 2006 and 2020 and around one fifth (19%) of the EEZs have an average time of emergence of the transboundary index across stocks prior to 2020. Shifts in stocks’ distributions will continue to exceed historical limits steadily towards the end of the $21^{st}$ century (Figure Figure \@ref(fig:toeFigure1)). I based our transboundary index on a transboundary stock’s centroid defined as the average grid cells that present the higher stock’s abundance (see Methods - Calculating an index of transboundary range shift). Results from the sensitivity analysis suggest that our method of estimating the time of emergence of the transboundary index is robust to the abundance level (e.g. the top 90%) of the stock (Figure \@ref(fig:toeFigureS3).
 
 
 ```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "Time of emergence by Exclusive Economic Zone (EEZ) and transboundary stock: A) results in absolute numbers (green). B) results expressed as a percentage of the total emerging stocks and EEZ with emerging stock (purple)."}
@@ -212,7 +212,7 @@ grid.raster(img)
 
 Our analysis suggests that most (n = 47) countries responsible for 75% of the yearly revenue generated from transboundary stocks between 2005 and 2010 will see their distribution range shifts beyond historical variabilities between 2025 and 2040 (Figure \@ref(fig:toeFigure3)). In some cases, like Indonesia (ranked $8^{th}$ in terms of revenue from transboundary stocks), Thailand (ranked $7^{th}$ in terms of revenue from transboundary stocks) and the United States (ranked $4^{th}$ in terms of fishing revenue from transboundary stocks), stocks’ range shifts swill emerge by around 2030. The 47 countries that make up the bulk of the global fisheries revenues also have more stocks with range shifts emerging from historical variabilities, being Spain (n = 122), France (n = 85), China and Portugal (both n = 73) and Senegal (n = 66) the top 5 leading countries in number of emerging stocks. 
 
-On average, stocks that will see their transboundary index emerge by 2100 represent 27% \pm 23% of their EEZ’s revenue produced by fisheries targeting transboundary species between 2004 and 2010. However, large variation exists in the proportion that stocks with emerging transboundary index have in the current revenue participation across EEZs. In some cases e.g., El Salvador and New Zealand, stock’s with emerging transboundary index represent less than 1% of the revenue generated from transboundary fisheries  in their respective EEZs between 2004 and 2014. On the contrary, stocks with emerging transboundary index from the Marshal Islands and Tokelau represent over 90% of the revenue generated from fisheries targeting transboundary stocks within their respective EEZs during the same time period (Figure \@ref(fig:toeFigure2)A). In addition, some EEZs are projectede to have a few emerging stocks that represent large proportion of revenue from transboundary stocks e.g., in Peru and Finland (with 10 and 5 emerging stocks representing 86% and 78% of average fishing revenue between 2004 to 2010, respectively). Morocco and Malaysia are the only two countries amongst the top 10 countries with the larger number of stocks with emerging transboundary index (n = 56 and 53, respectively) where the contribution of such stocks on fishing revenue is less than 20%. 
+On average, stocks that will see their transboundary index emerge by 2100 represent 27% $\pm$ 23% of their EEZ’s revenue produced by fisheries targeting transboundary species between 2004 and 2010. However, large variation exists in the proportion that stocks with emerging transboundary index have in the current revenue participation across EEZs. In some cases e.g., El Salvador and New Zealand, stock’s with emerging transboundary index represent less than 1% of the revenue generated from transboundary fisheries  in their respective EEZs between 2004 and 2014. On the contrary, stocks with emerging transboundary index from the Marshal Islands and Tokelau represent over 90% of the revenue generated from fisheries targeting transboundary stocks within their respective EEZs during the same time period (Figure \@ref(fig:toeFigure2)A). In addition, some EEZs are projectede to have a few emerging stocks that represent large proportion of revenue from transboundary stocks e.g., in Peru and Finland (with 10 and 5 emerging stocks representing 86% and 78% of average fishing revenue between 2004 to 2010, respectively). Morocco and Malaysia are the only two countries amongst the top 10 countries with the larger number of stocks with emerging transboundary index (n = 56 and 53, respectively) where the contribution of such stocks on fishing revenue is less than 20%. 
 
 
 ```{r toeFigure3, eval = T,  echo = F, fig.width=7, fig.height=8,fig.pos= "H", fig.cap =  "Average time of emergence of stocks’ transboundary index per fishing entity, aggregated by colour and shape according to region. Fishing revenue on a logarithmic scale. Showing country names for the top 90th percentile of annual fishing revenue."}
@@ -222,7 +222,7 @@ grid.raster(img)
 
 ```
 
-I set an arbitrary threshold of 1 s.d. (67% confidence) to determine the time of emergence of the transboundary index and the change in stock share ratio below the threat point (see Methods). I tested the sensitivity of our methods by considering a larger threshold for the time of emergence (e.g., 2 s.d for a 95% confidence). The global average time of emergence of the transboundary index considering a 2 s.d threshold was 2036 \pm 28, a difference of about 7 years relative to the 1 s.d. threshold (Figure \@ref(fig:toeFigureS2)). In total, 4,119 transboundary stocks would emerge between 2006 and 2100 considering a more conservative metric, that is, 40% (n = 1626) fewer emerging stocks than using a 1.s.d threshold. 
+I set an arbitrary threshold of 1 s.d. (67% confidence) to determine the time of emergence of the transboundary index and the change in stock share ratio below the threat point (see Methods). I tested the sensitivity of our methods by considering a larger threshold for the time of emergence (e.g., 2 s.d for a 95% confidence). The global average time of emergence of the transboundary index considering a 2 s.d threshold was 2036 $\pm$ 28, a difference of about 7 years relative to the 1 s.d. threshold (Figure \@ref(fig:toeFigureS2)). In total, 4,119 transboundary stocks would emerge between 2006 and 2100 considering a more conservative metric, that is, 40% (n = 1626) fewer emerging stocks than using a 1.s.d threshold. 
 
 
 I compared species time of emergence within EEZs by species’ habitat association (Figure \@ref(fig:toeFigure4)). Each species is assigned to be associated to one of the seven habitat types based on information available from FishBase and SeaLifeBase for fish and invertebrates, respectively (see Methods). Significant differences were found in the time of emergence of stocks range shifts, indicated by the transbounudary index, by their specie's habitat association (Kruskal-Wallis, $X^2$ = 286.48, DF = 93, p < 0.001). Specifically, time of emergence of range shifts of species that are associated with pelagic-oceanic and reef habitats were significantly different than other habitat preferences (See Table \@ref(tab:toeTableS2)). On average, species associated with pelagic oceanic habitats e,g, tunas (*Thunnus sp.*), bathy-pelagic habitats e.g., blue whiting (*Micromesistius poutassou*) and corals (e.g., Bigeye snapper *Lutjanus lutjanus*) are projected to have an earliest time of emergence (toeFigure \@ref(fig:toeFigure4)). Species associated with bathydemersal habitats such as Alaska plaice (*Pleuronectes quadrituberculatus*) generally have an average time of emergence of range shifts that is later than 2025 (Figure \@ref(fig:toeFigure4)).
@@ -251,7 +251,7 @@ read_csv("../Tables/mlr_result.csv") %>%
 
 ### Changes in the stock share ratio of transboundary stocks
 
-I have identified the stocks that are projected to have changes in stock share ratio beyond an EEZ’s threat point and estimated the changes in the stock share ratio by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to the recent past (1951-2005) (see methods - equation \@ref(eq:five)). By the early $21^{st}$ century, the global average proportion of transboundary stocks that are projected to change their stock share ratio beyond the EEZ’s threat point is 18% \pm 15% (Figure \@ref(fig:toeFigure5)A). The changes in stock share ratio are expected to increase slightly towards the mid $21^{st}$ century (Figures \@ref(fig:toeFigureS4) and \@ref(fig:toeFigureS5)). However, changes in stock share ratio for specific stocks and in some EEZs are projected to be exceptionally high. For example, Guatemala shares Panulirus gracilis stock with Mexico, and Guatemala’s share is projected to increase by >50%, that is from 12% to 26% by the early $21^{st}$ century. Towards the mid $21^{st}$ century, changes in stock share ratio per EEZ will not be substantial (Figure \@ref(fig:toeFigureS5)) relative to the early $21^{st}$ century but are expected to increase in intensity (Figure \@ref(fig:toeFigureS4)). Our results suggest that 87% (n = 238) of the world EEZs will experience changes in stock share ratio beyond a country’s threat point by the early $21^{st}$ century (Figure \@ref(fig:toeFigure5)A). These EEZs will see one third (33% \pm 21%) of their transboundary stocks changing the stock share ratio beyond the threat point (Figure \@ref(fig:toeFigure5)A). Particularly, Brazil, French Guiana, Guam, Kergelen and Pitcairin will see changes in all of the transboundary stocks analyzed while Venezuela (6%), Bonaire (9%), China (10%) and Vietnam (10%) will be the only countries with less than 10% of stocks changing beyond the threat point. 
+I have identified the stocks that are projected to have changes in stock share ratio beyond an EEZ’s threat point and estimated the changes in the stock share ratio by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to the recent past (1951-2005) (see methods - equation \@ref(eq:five)). By the early $21^{st}$ century, the global average proportion of transboundary stocks that are projected to change their stock share ratio beyond the EEZ’s threat point is 18% $\pm$ 15% (Figure \@ref(fig:toeFigure5)A). The changes in stock share ratio are expected to increase slightly towards the mid $21^{st}$ century (Figures \@ref(fig:toeFigureS4) and \@ref(fig:toeFigureS5)). However, changes in stock share ratio for specific stocks and in some EEZs are projected to be exceptionally high. For example, Guatemala shares Panulirus gracilis stock with Mexico, and Guatemala’s share is projected to increase by >50%, that is from 12% to 26% by the early $21^{st}$ century. Towards the mid $21^{st}$ century, changes in stock share ratio per EEZ will not be substantial (Figure \@ref(fig:toeFigureS5)) relative to the early $21^{st}$ century but are expected to increase in intensity (Figure \@ref(fig:toeFigureS4)). Our results suggest that 87% (n = 238) of the world EEZs will experience changes in stock share ratio beyond a country’s threat point by the early $21^{st}$ century (Figure \@ref(fig:toeFigure5)A). These EEZs will see one third (33% $\pm$ 21%) of their transboundary stocks changing the stock share ratio beyond the threat point (Figure \@ref(fig:toeFigure5)A). Particularly, Brazil, French Guiana, Guam, Kergelen and Pitcairin will see changes in all of the transboundary stocks analyzed while Venezuela (6%), Bonaire (9%), China (10%) and Vietnam (10%) will be the only countries with less than 10% of stocks changing beyond the threat point. 
 
 
 ```{r toeFigure5, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "Changes in stock share ratio below each country’s threat point by 2030 (2021-2040) relative to 1951-2005. Lines represent the average gain of transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those that are gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point. Panel B zooms in to specific areas shown within the grey dashed line boundaries in A.s"}
@@ -284,7 +284,7 @@ Regional differences in time of emergence are attributed to the variations in en
 Our results underscore regional ‘hotspots’ of climate risk for transboundary fisheries management that will require prompt adaptation of management plans (Figure \@ref(fig:toeFigure2)). For example, Polynesia and Micronesia are the only regions where the average time of emergence of the distribution of where all transboundary stocks across all EEZs emerged before 2022 (Figure \@ref(fig:toeFigure5)). Moreover, countries in these hotspot regions are highly dependent on pelagic-oceanic (e.g., tunas and bill fishes; [@Johnson:2017ev]) and reef-associated transboundary stocks [@Cabral:2018hc] for both food security and profits [@CisnerosMontemayor:2016gq; @Hanich:2018dh]. On the other hand, “coldspots” of climate risk for transboundary fisheries like the Northeast Atlantic and Northwest Pacific where stocks are expected to emerge later in the 21st century. Assuming that these countries already have adequate transboundary management to deal with historical and current variations in fish stocks’ distribution e.g., the Pacific Salmon Treaties [@Miller:2004fpa], management agencies are likely to have more time to prepare for emerging stock shifts. In cases where stocks are emerging or have already emerged, adaptation policies are urgently needed to address an issue that could be impacting important fisheries [@Burden:2019ij]. Currently, fisheries targeting tunas shared stocks in the South Pacific Islands region operate under the Vessel Day Scheme - which takes into account shifts in stocks and catches making it a good example where a management system has been set up that is somewhat anticipatory [@Aqorau:2018bh]. However, even strategies that take into consideration the shift of the species within the Party’s area will likely require to deal with the newcomer issue that NEAFC is currently facing over Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. As species have been emerging from their historical distribution since 2006, regional management bodies require to revise their management actions as today most of them are not equipped with strategies to cope with shifting species distributions [@Oremus:2020id; @Sumby:2021gw]. This is of specific concern for those management bodies located in the emerging “hotspots” here identified.
 
 
-The presentce of EEZs lacking stocks with emerging transboundary index is a combination of EEZ shape, climate projections, and a reduced number of transbounudary stocks. For example, there are 59 commercial fish stocks fished the Arctic with the vast majority focused on the Barents, Bering and Norwegian seas with limited knowledge about the species biology [@Christiansen:2014gg]. However, the Arctic has been warming faster than many other regions resulting in a reduction in sea-ice [@Douglas:2010Mb] that could potentially be occupied by species previously not present [@REF]. As a result, the biomass of Arctic marine animals [@BryndumBuchholz:2019kh] and catch and revenue of associated fisheries [@Tai:2019cq; @Lam:2014fq] are expected to increase in the incoming years, although substantial uncertainty exists on the magnitude of change [@BryndumBuchholz:2019kh]. Moreover, projections suggest a larger increment on transboundary stocks in the incoming years in the Arctic [@Pinsky:2018cb] as climate change pushes sub-polar species further North [@Morley:2018fn; @Frainer:2017ji]. In the Case of Brazil, in addition to having few transbounudary stocks (only 4 shared with Uruguay in this study), the large diffrence in the EEZs lenghts could also be influencing the results. 
+The presentce of EEZs lacking stocks with emerging transboundary index is a combination of EEZ shape, climate projections, and a reduced number of transbounudary stocks. For example, there are 59 commercial fish stocks fished the Arctic with the vast majority focused on the Barents, Bering and Norwegian seas with limited knowledge about the species biology [@Christiansen:2014gg]. However, the Arctic has been warming faster than many other regions resulting in a reduction in sea-ice [@Douglas:2010Mb] that could potentially be occupied by species previously not present [@IPCC:2019tn]. As a result, the biomass of Arctic marine animals [@BryndumBuchholz:2019kh] and catch and revenue of associated fisheries [@Tai:2019cq; @Lam:2014fq] are expected to increase in the incoming years, although substantial uncertainty exists on the magnitude of change [@BryndumBuchholz:2019kh]. Moreover, projections suggest a larger increment on transboundary stocks in the incoming years in the Arctic [@Pinsky:2018cb] as climate change pushes sub-polar species further North [@Morley:2018fn; @Frainer:2017ji]. In the Case of Brazil, in addition to having few transbounudary stocks (only 4 shared with Uruguay in this study), the large diffrence in the EEZs lenghts could also be influencing the results. 
 
 <!-- For Brazil and Uruguay, the current and future distribution of the transboundary stocks in combination with the particular characteristics of these EEZs could be influencing the results. First, both Argentine menhaden and Argentine shortfin squid have distributions with larger biomass concentration further south, with Brazil serving as the northern limit of the distributional range [@AquaMaps:2019ui; @AquaMaps:2019wt]. Second, Brazil’s EEZ is substantially larger than Uruguay’s resulting in a long distance between Brazil’s and the stocks’ centroids. Third, both stocks are expected to shift further south in the incoming years [@AquaMaps:2019ui; @AquaMaps:2019w]. Thus, the further southern shift of Argentine menhaden and shortfin squid in combination with the reduced latitudinal gradient of Uruguay’s EEZ results in a small effect in the already long latitudinal distance between Brazil’s EEZ and the stocks’ centroids. In the case of the two shrimp species, their destitution range spams along the cost of Brazil and is not expected to have a strong shift in the incoming years, also resulting in a stable transboundary index [@AquaMaps:2019wn; @AquaMaps:2019wj]. -->
 
@@ -292,7 +292,7 @@ The presentce of EEZs lacking stocks with emerging transboundary index is a comb
 
 Changes in stock share ratio beyond a country’s threat point will be seen across the world, suggesting that climate change impacts on transboundary stock management is a global problem (Figure \@ref(fig:toeFigure5)). Poleward shifts in stock share ratio are expected in regions of the world with relatively long EEZs and few boundaries, like the northeast Pacific and the southeast Atlantic. However, despite observations and modelling work indicating that, generally, climate change is shifting species distributions poleward [@Cheung:2010dt; @Poloczanska:2016kk; @IPCC:2019tn; @Fogarty:2017eo], some regions like the eastern tropical Pacific and eastern tropical Atlantic Oceans will experience a shift in distribution towards the equator. Specifically, in the eastern tropical Pacific, the direction of shift is expected to be from Mexico to Ecuador with EEZs losing stock share ratio to their southern neighbors. Such range shifts towards the equator reflect movements to cooler habitats characteristic of equatorial upwelling systems [@Clarke:2020ep]. They are consistent with regional modeling studies suggesting that by mid 21st century, marine species will move between 50 and 100 km southward of Mexico’s EEZ towards Peru under a high emission climate change scenario [@Clarke:2020ep]. Moreover, regions characterized by multiple political boundaries, like the Caribbean and the northeast Atlantic, will see a complex network of changes in SSR with no clear pattern (\@ref(fig:toeFigure5)B). These regions are known for being highly connected by both fish adult migration [@Levin:2018in] and larvae dispersal [@Ramesh:2019va] supporting the implementation of joint management plans [@Burden:2019ij] and the call for new implemented shared policies [@Levin:2018in]. However, game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Sumaila:2013hv], thus, making it particularly challenging for countries in these regions to coordinate the management of shifting shared stocks.
 
-Changes in stock share ratio beyond the threat point of countries sharing a common resource could instigate international conflict and hinder bi-lateral agreements (@Miller:2013iv; @Sumaila:2020tp). Lessons learned from historic distributional shifts of shared stocks suggest that treaties that are not prepare to respond to such shifts will be less resilient to changes in transboundary fish stocks share ratio due to climate change [@Miller:2013iv; @Sumaila:2020tp]. For example, disputes over Pacific salmon between Canada and the USA arose in the 1990s when a climate-related shift in stock abundance favoured Alaska’s salmon fisheries over Canada’s [@Miller:2013iv; @Munro:2002uf; @Song:2017va]. The conflict lasted over ten years until Canada and the USA agreed on a mutual conservation fund where the US would contribute the larger proportion to support scientific research, habitat restoration and enhancement of wild stock production in transboundary rivers [@Munro:2002uf]. Identified strategies to cope with changes in the share proportion of transboundary stocks include the incorporation of side payments [@Tunca:2019if], increased international cooperation [@Miller:2013iv] and dynamic ocean management [@Chapter5; @Pinsky2018]. Side payments are mechanisms that provide a solution to the inequality produced by shifts in the stock’s distribution [@Tunca:2019if; @Miller:2004fpa]. These can be monetary (e.g., the stock-“winning” State compensates the stock-“loosing” state for the proportional shift) or other methods like the Pacific salmon case (e.g., a conservation fund payed mainly by one Party) [@Miller:2004fpa; @Miller:2013iv].  Strengthening current international cooperation will be required as stock distribution will move to neighboring jurisdictions, requiring combine efforts to generate information and set proper management rules [@Miller:2013iv]. Finally, flexible management rules might be better fitted to capture the stock’s distributional shift. For example, quota allocation based on the stock’s current distribution like that for Pacific halibut (*Hippoglossus stenolepis*) managed by Canada and the US [@Sumaila:2020tp; @PalaciosAbrantes:2020vt] might be better able to capture the stock’s shifts than a quota based on a fix-historical proportion like the case of the EU [@Baudron:2020dj].
+Changes in stock share ratio beyond the threat point of countries sharing a common resource could instigate international conflict and hinder bi-lateral agreements (@Miller:2013iv; @Sumaila:2020tp). Lessons learned from historic distributional shifts of shared stocks suggest that treaties that are not prepare to respond to such shifts will be less resilient to changes in transboundary fish stocks share ratio due to climate change [@Miller:2013iv; @Sumaila:2020tp]. For example, disputes over Pacific salmon between Canada and the USA arose in the 1990s when a climate-related shift in stock abundance favoured Alaska’s salmon fisheries over Canada’s [@Miller:2013iv; @Munro:2002uf; @Song:2017va]. The conflict lasted over ten years until Canada and the USA agreed on a mutual conservation fund where the US would contribute the larger proportion to support scientific research, habitat restoration and enhancement of wild stock production in transboundary rivers [@Munro:2002uf]. Identified strategies to cope with changes in the share proportion of transboundary stocks include the incorporation of side payments [@Tunca:2019if], increased international cooperation [@Miller:2013iv] and dynamic ocean management [@Pinsky:2018cb, Chapter 5]. Side payments are mechanisms that provide a solution to the inequality produced by shifts in the stock’s distribution [@Tunca:2019if; @Miller:2004fpa]. These can be monetary (e.g., the stock-“winning” State compensates the stock-“loosing” state for the proportional shift) or other methods like the Pacific salmon case (e.g., a conservation fund payed mainly by one Party) [@Miller:2004fpa; @Miller:2013iv].  Strengthening current international cooperation will be required as stock distribution will move to neighboring jurisdictions, requiring combine efforts to generate information and set proper management rules [@Miller:2013iv]. Finally, flexible management rules might be better fitted to capture the stock’s distributional shift. For example, quota allocation based on the stock’s current distribution like that for Pacific halibut (*Hippoglossus stenolepis*) managed by Canada and the US [@Sumaila:2020tp; @PalaciosAbrantes:2020vt] might be better able to capture the stock’s shifts than a quota based on a fix-historical proportion like the case of the EU [@Baudron:2020dj].
 
 
 ## Caveats and uncertainties
@@ -306,14 +306,14 @@ Global society has set the ambitious goal to manage all fisheries sustainably (S
 
 <!-- ## Supplements -->
 
-```{r toeFigureS1, eval = F,  echo = F, fig.width=9, fig.height=4, fig.cap =  "World Exclusive Economic Zones used in this study as devided by the Sea Around Us and their centroids (points)."}
+```{r FigureS1, eval = F,  echo = F, fig.width=9, fig.height=4, fig.cap =  "World Exclusive Economic Zones used in this study as devided by the Sea Around Us and their centroids (points)."}
 
 img <- readPNG("../Figures/Supp1.png")
 grid.raster(img)
 
 ```
 
-```{r toeFigureS2, eval = F,  echo = F, fig.width=9, fig.height=4, fig.cap = "Graphical representation of the transboundary index (TI) to determine the time of emergence of transboundary stocks. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighbouring Exclusive Economic Zones sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overpasses historical values (Bottom panel)."}
+```{r FigureS2, eval = F,  echo = F, fig.width=9, fig.height=4, fig.cap = "Graphical representation of the transboundary index (TI) to determine the time of emergence of transboundary stocks. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighbouring Exclusive Economic Zones sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overpasses historical values (Bottom panel)."}
 
 img <- readPNG("../Figures/Supp2.png")
 grid.raster(img)
@@ -321,7 +321,7 @@ grid.raster(img)
 ```
 
 
-```{r toeFigureS3, eval = F,  echo = F, fig.width=4, fig.height=4, fig.cap =  "Average Time  of Emergence and standar dviation for a 64% confidence treshold  (purple) and a 98% confidence teshold (yellow)"}
+```{r FigureS3, eval = F,  echo = F, fig.width=4, fig.height=4, fig.cap =  "Average Time  of Emergence and standar dviation for a 64% confidence treshold  (purple) and a 98% confidence teshold (yellow)"}
 
 img <- readPNG("../Figures/Supp3.png")
 grid.raster(img)
@@ -330,7 +330,7 @@ grid.raster(img)
 
 
 
-```{r toeFigureS4, eval = F,  echo = F, fig.width=4, fig.height=4, fig.cap =  "Distribution of Stock Share Ratio percentage change by the early (2021-2040) and middle (2040-2060) $21^{st}$ centurury relative to today (1951-2005)"}
+```{r FigureS4, eval = F,  echo = F, fig.width=4, fig.height=4, fig.cap =  "Distribution of Stock Share Ratio percentage change by the early (2021-2040) and middle (2040-2060) $21^{st}$ centurury relative to today (1951-2005)"}
 
 img <- readPNG("../Figures/Supp4.png")
 grid.raster(img)
